# url-shortener

./: .gitignore  README.md
counter_service/: .gitignore  Makefile  README.md  (+2 more)
load_test_service/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
load_test_service/envs/: locust.env.example
load_test_service/scripts/: run_master.sh  run_worker.sh
load_test_service/tests/: url_shortener_test.py
url_shortener_service/: Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
url_shortener_service/app/: main.py
url_shortener_service/app/exceptions/: http_exceptions.py
url_shortener_service/app/middlewares/: auth_mdw.py
url_shortener_service/app/models/: url_mdl.py
url_shortener_service/app/repositories/: url_repo.py
url_shortener_service/app/repositories/validators/: url_vld.py
url_shortener_service/app/routers/: urls_routes.py  users_routes.py
url_shortener_service/app/routers/validators/: shorten_url_vld.py
url_shortener_service/app/services/urls/: urls_svc.py
url_shortener_service/app/services/urls/validators/: shorten_vld.py
url_shortener_service/app/services/users/: users_svc.py
url_shortener_service/app/settings/: db.py  redis.py  zookeeper.py
url_shortener_service/app/tests/integration_tests/: test_url_shorten.py
url_shortener_service/app/tests/unit_tests/urls_svc_tests/: test_generate_short_url.py  test_shorten_url.py
url_shortener_service/envs/: app.env.example  app_db.env.example  redis.env.example
url_shortener_service/scripts/: app-db-init.sh  run_app.sh
(+1 files in other folders)
